TROYES-42 Fix: npe check eas tel values